# art_gripper_ros2

./: .gitignore  LICENSE.md  README.md  RELEASE.md
art_gripper/: CMakeLists.txt  package.xml
art_gripper/launch/: gripper_ecat.launch.py  gripper_ecat_dual.launch.py  gripper_ecat_left.launch.py  gripper_ecat_right.launch.py
art_gripper/src/gripper_client/: gripper_client.cpp  gripper_client.h  node.cpp
art_gripper/src/gripper_ecat/: gripper_ecat.cpp  gripper_ecat.h  main.cpp  node.cpp  robotData.h  robot_data.h  sysData.h
art_gripper/src/gripper_ecat/device/: deviceMan.cpp  deviceMan.h  ecMaster.cpp  ecMaster.h  ecSlaves.h
art_gripper/src/gripper_ecat/device/slaves/: ecGripper.h
art_gripper/src/gripper_ecat/thread/: dtThread.cpp  dtThread.h  procCtrl.cpp  procCtrl.h  procDisp.cpp  procDisp.h  threadMan.cpp  threadMan.h
art_gripper/src/gripper_ecat/util/: dtTerm.cpp  dtTerm.h
art_gripper_interfaces/: CMakeLists.txt  package.xml
art_gripper_interfaces/msg/: EthercatState.msg  GripperControl.msg  GripperInfo.msg  GripperStatus.msg
art_gripper_interfaces/srv/: GetGripperInfo.srv  MotorOn.srv  ResetFrictionModel.srv  SetContactSensitivity.srv  SetGrippingForce.srv  SetTarget.srv  SetTargetCurrent.srv  SetTargetFingerPose.srv  SetTargetFingerPoseSpeed.srv  SetTargetFingerPoseWithSpeed.srv  SetTargetFingerWidth.srv  SetTargetFingerWidthSpeed.srv  SetTargetFingerWidthWithSpeed.srv  SetTargetPose.srv  SetTargetWidth.srv
art_gripper_py/: package.xml  setup.cfg  setup.py
art_gripper_py/art_gripper_py/: gripper_client.py
